devops/k8s/dev/administration.api/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sosadminapi-dev
  labels:
    name: sosadminapi-dev
