devops/k8s/dev/administration.api/api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sosadminapi-api
  name: sosadminapi-api
  namespace: sosadminapi-dev
spec:
  type: ClusterIP
  ports:
    - port: 5005
      targetPort: 5005
  selector:
    app: sosadminapi-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sosadminapi-api
  name: sosadminapi-api
  namespace: sosadminapi-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sosadminapi-api
  strategy: 
      type: Recreate
  template:
    metadata:
      annotations:
        logging: "true"
      labels:
        app: sosadminapi-api
    spec:
      securityContext:
        runAsNonRoot: true
      serviceAccountName: ""
      topologySpreadConstraints: # try to spread out api instances over available nodes
      - labelSelector:
          matchLabels:
            app: sosadminapi-api # pods labeled app: sosadminapi-api
        maxSkew: 1
        topologyKey: kubernetes.io/hostname # 1 node = 1 topology
        whenUnsatisfiable: DoNotSchedule
      containers:
        - env:
          - name: ASPNETCORE_ENVIRONMENT
            value: k8s-dev
          - name: HangfireDbPassword
            valueFrom:
                secretKeyRef:
                  key: HangfireDbPassword
                  name: sosadminapi-secret
          - name: HangfireDbUserName
            valueFrom:
                secretKeyRef:
                  key: HangfireDbUserName
                  name: sosadminapi-secret
          - name: InstrumentationKey
            valueFrom:
                secretKeyRef:
                  key: InstrumentationKey
                  name: sosadminapi-secret
          - name: ProcessDbPassword
            valueFrom:
                secretKeyRef:
                  key: ProcessDbPassword
                  name: sosadminapi-secret
          - name: ProcessDbUserName
            valueFrom:
                secretKeyRef:
                  key: ProcessDbUserName
                  name: sosadminapi-secret
          - name: RedisPassword
            valueFrom:
                secretKeyRef:
                  key: RedisPassword
                  name: sosadminapi-secret
          - name: VerbatimDbPassword
            valueFrom:
                secretKeyRef:
                  key: VerbatimDbPassword
                  name: sosadminapi-secret
          - name: VerbatimDbUserName
            valueFrom:
                secretKeyRef:
                  key: VerbatimDbUserName
                  name: sosadminapi-secret
          - name: ApplicationInsights
            value: '{"InstrumentationKey": "SECRET_PLACEHOLDER", "EnableRequestBodyLogging": false, "EnableSearchResponseCountLogging": false}'
          - name: AllowedOrigins
            value: '*'
          - name: AuthenticationConfiguration
            value: '{"Authority": "https://useradmin2-auth-dev.wt.artdata.slu.se", "ClientId": "sos.admin.api"}'
          - name: SosApiConfiguration
            value: '{"ObservationsApiAddresses": [ "https://sos-search-dev.wt.artdata.slu.se/" ],"ElasticSearchProxyAddresses": [ "https://sos-proxy-dev.wt.artdata.slu.se/" ],"AnalysisApiAddresses": [ "https://sos-analysis-dev.wt.artdata.slu.se/" ],"DataStewardshipApiAddresses": [ "https://datastewardship-dev.wt.artdata.slu.se/" ]}'
          - name: ProcessConfiguration
            value: '{"TaxonAttributeServiceConfiguration": {"BaseAddress": "https://taxonattributeservice.artdata.slu.se/api","AcceptHeaderContentType": "application/json"},"TaxonServiceConfiguration": {"BaseAddress": "https://taxonservice.artdata.slu.se/DarwinCore/DarwinCoreArchiveFile?version=custom","AcceptHeaderContentType": "application/text","TaxonApiAddress": "https://taxonapi-dev.wt.artdata.slu.se/darwincore/download?version=custom"}}'
          - name: RedisConfiguration
            value: '{"EndPoint": "redis.redis-dev.svc.cluster.local", "Port": 26379, "Password": "SECRET_PLACEHOLDER", "ServiceName": "mymaster"}'
          - name: UserServiceConfiguration
            value: '{"BaseAddress": "https://artdatauser-dev.artdata.slu.se/api", "AcceptHeaderContentType": "application/json", "UserAdmin2ApiBaseAddress": "https://useradmin2-api-dev.wt.artdata.slu.se", "ClientId": "SOS", "ClientSecret": "SECRET_PLACEHOLDER", "Scope": "useradmin.api SOS.Observations.Protected openid", "TokenUrl": "http://useradmin2-auth-dev.wt.artdata.slu.se/connect/token", "TokenExpirationBufferInSeconds": 300, "IdentityProvider": {"Authority": "https://useradmin2-auth-dev.wt [...]
          - name: ImportConfiguration
            value: '{"ArtportalenConfiguration": {"ConnectionStringBackup": "Server=SpeciesObservationSwe_test.db.slu.se;Database=SpeciesObservationSwe_test;Integrated Security=sspi;MultipleActiveResultSets=true;Pooling=true;Max Pool Size=1000;Min Pool Size=0;Persist Security Info=false;TrustServerCertificate=true;ApplicationIntent=ReadOnly;Connection Timeout=30;Connection Lifetime=0;","ConnectionStringLive": "Server=SpeciesObservationSwe_test.db.slu.se;Database=SpeciesObservationSwe_test;Integr [...]
          - name: VerbatimDbConfiguration
            value: '{"UserName": "SECRET_PLACEHOLDER", "Password": "SECRET_PLACEHOLDER", "Hosts": [{"Name": "artmongo-t-1.artdata.slu.se","Port": 27017}], "ReplicaSetName": null, "DatabaseName": "sos-harvest-dev", "UseTls": false, "AuthenticationDb": "admin", "ReadBatchSize": 10000, "WriteBatchSize": 10000}'
          - name: ProcessDbConfiguration
            value: '{"UserName": "SECRET_PLACEHOLDER", "Password": "SECRET_PLACEHOLDER", "Hosts": [{"Name": "artmongo-t-1.artdata.slu.se","Port": 27017}], "ReplicaSetName": null, "DatabaseName": "sos-dev", "UseTls": false, "AuthenticationDb": "admin", "ReadBatchSize": 10000, "WriteBatchSize": 10000}'
          - name: HangfireDbConfiguration
            value: '{"UserName": "SECRET_PLACEHOLDER", "Password": "SECRET_PLACEHOLDER", "Hosts": [{"Name": "artmongo-t-1.artdata.slu.se","Port": 27017}],"DatabaseName": "sos-hangfire-dev", "UseTls": false, "AuthenticationDb": "admin", "JobExpirationDays": 3}'
          image: adbpocreg.azurecr.io/sosadminapi-api:$(Build.BuildId)
          name: sosadminapi-api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5005
          readinessProbe: # ready to accept traffic, failure = stops routing traffic to this pod but does not restart the pod!
            httpGet:
              path: /healthz
              port: 5005
              httpHeaders:
              - name: Host
                value: KubernetesReadinessProbe
            initialDelaySeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 30 # runs every 30 seconds
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 11m
              memory: 2G
            limits:
              memory: 2G
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
