devops/k8s/dev/administration.api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sosadminapi-ingress
  namespace: sosadminapi-dev
  annotations:
    cert-manager.io/cluster-issuer: vault-slu.se-cluster-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - sosadminapi-dev.wt.artdata.slu.se
      secretName: private-star.artdata.slu.se-tls
  rules:
  - host: sosadminapi-dev.wt.artdata.slu.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sosadminapi-api
            port:
              number: 5005
